# python-camera-enumerator

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/: main.py
src/camera_enumerator/: __init__.py  camera.py  linux.py  macos.py
src/tests/: conftest.py  test_linux.py
